--- a/html/project.html
+++ b/html/project.html
@@ -10,15 +10,15 @@
     <nav>
         <ul class="sidebar">
             <li onclick=hideSidebar()><a href="#"><svg class="button" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="undefined"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
-            <li><a href="/html/aboutme">About Me</a></li>
-            <li><a href="/html/project">Project</a></li>
-            <li><a href="/html/skill">Experience</a></li>
+            <li><a href="/html/aboutme.html">About Me</a></li>
+            <li><a href="/html/project.html">Project</a></li>
+            <li><a href="/html/skill.html">Experience</a></li>
         </ul>
         <ul>
-            <li id="home"><a href="./">Vaughn Joshua</a></li>
-            <li class="hideOnMobile"><a href="/html/aboutme">About Me</a></li>
-            <li class="hideOnMobile"><a href="/html/project">Project</a></li>
-            <li class="hideOnMobile"><a href="/html/skill">Experience</a></li>
+            <li id="home"><a href="/index.html">Vaughn Joshua</a></li>
+            <li class="hideOnMobile"><a href="/html/aboutme.html">About Me</a></li>
+            <li class="hideOnMobile"><a href="/html/project.html">Project</a></li>
+            <li class="hideOnMobile"><a href="/html/skill.html">Experience</a></li>
             <li class="menu-button" onclick="showSidebar()"><svg class="button" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="undefined"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></li>
         </ul>
     </nav>
@@ -70,7 +70,7 @@
                             <h1>Personal Blog Website</h1>
                             <p>The site is responsive and built using HTML, CSS, and Bootstrap, making it easy for visitors to explore posts and engage with the content.</p>
                             <div class="hidden">
-                                <a href="/sources/html/Blog/blog.html" target="_blank">Learn More</a>
+                                <a href="/sources/html/Blog/index.html" target="_blank">Learn More</a>
                             </div>
                         </div>
                     </div>
