--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <div id="hero-txt">
             <nav>
                 <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/html/aboutme">About Me</a></li>
-                    <li><a href="/html/project">Project</a></li>
-                    <li><a href="/html/skill">Experience</a></li>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/html/aboutme.html">About Me</a></li>
+                    <li><a href="/html/project.html">Project</a></li>
+                    <li><a href="/html/skill.html">Experience</a></li>
                 </ul>
             </nav>
             <h1>Vaughn Joshua Barit</h1>
